# weather

./: .gitignore  Makefile  README.md  Weather  WeatherApp.h  globals.h  meson.build
data/: AUTHORS  com.github.rugglcon.weather.appdata.xml  com.github.rugglcon.weather.desktop  meson.build
debian/: changelog  control  copyright
src/: App.h  Day.cpp  Day.h  Day.vala  Forecast.cpp  Forecast.h  Forecast.vala  Hour.vala  Location.h  Location.vala  Weather.cpp  Weather.h  Weather.vala  WeatherApp.cpp  WeatherApp.h  WeatherApp.vala  WeatherUtil.vala  grabber.sh  main.cpp
vapi/: libgeoclue-2.0.vapi
